# stromx-sl

./: .gitignore  .gitmodules  CMakeLists.txt  README.markdown  stromx-sl.kdev4
debian/: changelog  control  libstromx-sl-dev.install  rules
rpm/: stromx-sl.changes  stromx-sl.spec
stromx/sl/: CMakeLists.txt  Calibrate.cpp  Calibrate.h  Config.h.in  Decode.cpp  Decode.h  DecodeBase.cpp  DecodeBase.h  Encode.cpp  Encode.h  EncodeBase.cpp  EncodeBase.h  EncodeCalibrator.cpp  EncodeCalibrator.h  EncoderBase.cpp  EncoderBase.h  Locale.h  OpenGlProjector.cpp  OpenGlProjector.h  RbfInterpolate.cpp  RbfInterpolate.h  Sl.cpp  Sl.h
stromx/sl/test/: CMakeLists.txt  CalibrateTest.cpp  DecodeTest.cpp  EncodeCalibratorTest.cpp  EncodeTest.cpp  OpenGlProjectorTest.cpp  RbfInterpolateTest.cpp  coordinates.npy  grid_200x100_x.npy  grid_200x100_y.npy
